modules/algorithms/src/test/resources/PhRepexTestFiles/validRestart/1/LYS_penta.esv
 Number of ESVs and Title :
      1  LYS_penta
 Current Theta Positions :
    1.5759470361127164E+00
 Current Atomic Velocities :
    1.6698592083276890E+00
 Current Atomic Accelerations :
   -1.1560660862510012E+01
 Current Lambda Histogram(s) :
 ESV: 3-LYS (0) pH: 9.90
        X  [0.0-0.1]  [0.1-0.2]  [0.2-0.3]  [0.3-0.4]  [0.4-0.5]  [0.5-0.6]  [0.6-0.7]  [0.7-0.8]  [0.8-0.9]  [0.9-1.0]
 λ
 [0.0-0.1]         0         0         0         0         0         0         0         0         0         0
 [0.1-0.2]         0         0         0         0         0         0         0         0         0         0
 [0.2-0.3]         0         0         0         0         0         0         0         0         0         0
 [0.3-0.4]         0         0         0         0         0         0         0         0         0         0
 [0.4-0.5]         0         0         0         0         0         0         0         0         0         0
 [0.5-0.6]         0         0         0         0         0         0         0         0         0         0
 [0.6-0.7]         0         0         0         0         0         0         0         0         0         0
 [0.7-0.8]         0         0         0         0         0         0         0         0         0         0
 [0.8-0.9]         0         0         0         0         0         0         0         0         0         0
 [0.9-1.0]        18         0         0         0         0         0         0         0         0         0

