modules/algorithms/src/test/resources/PhRepexTestFiles/invalidAfterPhFail/5/LYS_penta_backup.esv
 Number of ESVs and Title :
      1  LYS_penta
 Current Theta Positions :
   -4.4995606369248490E-03
 Current Atomic Velocities :
    6.5413079107845820E-01
 Current Atomic Accelerations :
    2.1020715917242480E+01
 Current Lambda Histogram(s) :
 ESV: 3-LYS (0) pH: 10.90
        X  [0.0-0.1]  [0.1-0.2]  [0.2-0.3]  [0.3-0.4]  [0.4-0.5]  [0.5-0.6]  [0.6-0.7]  [0.7-0.8]  [0.8-0.9]  [0.9-1.0]
 λ
 [0.0-0.1]        45         0         0         0         0         0         0         0         0         0
 [0.1-0.2]         0         0         0         0         0         0         0         0         0         0
 [0.2-0.3]         0         0         0         0         0         0         0         0         0         0
 [0.3-0.4]         0         0         0         0         0         0         0         0         0         0
 [0.4-0.5]         0         0         0         0         0         0         0         0         0         0
 [0.5-0.6]         0         0         0         0         0         0         0         0         0         0
 [0.6-0.7]         0         0         0         0         0         0         0         0         0         0
 [0.7-0.8]         0         0         0         0         0         0         0         0         0         0
 [0.8-0.9]         3         0         0         0         0         0         0         0         0         0
 [0.9-1.0]         0         0         0         0         0         0         0         0         0         0

